# ito

./: .gitignore  Cargo.toml  README.md  flake.nix
nix/: default.nix  shell.nix
src/: main.rs  tui.rs
src/lib/: base64.rs  case.rs  count.rs  count_words.rs  formats.rs  hash.rs  lines.rs  misc.rs
