[package]
name = "sttr"
version = "0.1.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Easily change strings and convert string representations of data"
readme = "README.md"
homepage = "https://github.com/uncenter/sttr-rs"
repository = "https://github.com/uncenter/sttr-rs"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
base64 = "0.22.0"
clap = { version = "4.0", features = ["derive"] }
clap-stdin = "0.4.0"
convert_case = "0.6.0"
eyre = "0.6.12"
rand = "0.8.5"
serde = "1.0.199"
serde_json = "1.0.116"
toml = "0.8.12"
unicode-segmentation = "1.11.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
