[package]
name = "ito"
version = "0.1.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "A powerful string manipulation tool"
readme = "README.md"
homepage = "https://github.com/uncenter/ito"
repository = "https://github.com/uncenter/ito"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.9", features = ["derive"] }
clap-stdin = "0.4.0"
convert_case = "0.7.1"
eyre = "0.6.12"
rand = "0.8.5"
unicode-segmentation = "1.11.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
